--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
+  <script src="./src/assets/js/jquery-3.7.1.min.js"></script>
+  <script src="./src/assets/js/jquery.arctext.js"></script>
 </body>
 
 </html>
